Final Deliverables/Kubernetes/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nutrition-assistant
spec:
  type: NodePort
  ports:
    - port: 5000
  selector:
    app: nutrition-assistant
